# APS

./: .gitignore  README.md  alembic.ini  pyproject.toml
aps/: __init__.py  __main__.py  conf.py  const.py  logging.py  utils.py
aps/appstore/: __init__.py  app.py  constants.py  review.py  scraper.py
aps/cli/: __init__.py  application.py
aps/cli/commands/: database.py  extract.py
aps/db/: core.py  manage.py
aps/db/models/: base.py
aps/db/revisions/: env.py
aps/db/revisions/versions/: 0e0532e88e44_add_possible_policy_updates_field.py  0e7ce4f55c8f_first_revision.py  0f4c5a23b16f_add_policy_path_last_updated.py  56c45d1626e1_second_revision.py  a276b50eb7e9_first_revision.py  c51de85a94c0_second_revision.py  db597300d845_privacy_policy_content.py  f0b2ebe9e08a_add_app_category.py
aps/google/: search.py
aps/gplay/: __init__.py  app.py  review.py
aps/gplay/application/: models.py
aps/gplay/review/: models.py
examples/: fetch_top.py  fetch_top_sim.py  get_reviews_app.py  selenium_search.py
