[tool.poetry]
name = "aps"
version = "0.1.0"
description = ""
authors = ["Adam Green <adamg765@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
loguru = "^0.6.0"
pydantic = "^1.10.6"
google-play-scraper = "^1.2.3"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"
selenium = "^4.8.2"
requests = "^2.28.2"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
anyio = "^3.6.2"
sqlalchemy-utils = "^0.40.0"
asyncpg = "^0.27.0"
matplotlib = "^3.7.1"
psycopg2 = "^2.9.6"


[tool.poetry.group.format.dependencies]
black = "^23.1.0"
isort = "^5.12.0"


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.256"

[tool.poetry.scripts]
aps = 'aps.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length=120